--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="app"></div>
-        <script  src="./index.js"></script>
+        <script src="index.js"></script>
         <link rel="stylesheet" href="styles.css">
     </body>
 </html>
